feat(compatibility): use apache codec commons (https://commons.apache.org/proper/commons-codec/) for base64 encoding, sdk now compatible with android api version 17+